--- a/public/index.html
+++ b/public/index.html
@@ -28,8 +28,10 @@
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
-  <div id="redux"></div>
-  <div id="react-redux"></div>
+  <div style="background-color: aliceblue;padding: 10px;margin: 10px auto;">
+    <div id="redux"></div>
+    <div id="react-redux"></div>
+  </div>
   <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
